<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.eahm.stampaydemo.ui.Campaings.CampaingsFragment"
        android:label="@string/title_campaings"
        tools:layout="@layout/fragment_campaings" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.eahm.stampaydemo.ui.dashboard.DashboardFragment"
        android:label="@string/title_partner"
        tools:layout="@layout/fragment_partner" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.eahm.stampaydemo.ui.notifications.NotificationsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>