<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardCampaing"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:clickable="true"
    app:cardElevation="3dp"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:layout_marginBottom="10dp"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivCampaingStars"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvCampaingStars"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvCampaingSubtitle"
            app:srcCompat="@android:drawable/star_off" />

        <TextView
            android:id="@+id/tvCampaingStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campaing_sample_stars"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivCampaingStars"
            app:layout_constraintTop_toBottomOf="@+id/tvCampaingSubtitle" />

        <ImageView
            android:id="@+id/ivCampaingGift"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvCampaingGift"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvCampaingSubtitle"
            app:srcCompat="@drawable/ic_home_black_24dp" />

        <TextView
            android:id="@+id/tvCampaingGift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campaing_sample_gift"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivCampaingGift"
            app:layout_constraintTop_toBottomOf="@+id/tvCampaingSubtitle" />


        <TextView
            android:id="@+id/tvCampaingTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/campaing_sample_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvCampaingSubtitle"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvCampaingSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/campaing_sample_subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvCampaingTitle" />

        <ImageView
            android:id="@+id/ivCampaingImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="107dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

